# YouTokenToMe

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  benchmark.md  benchmark_bpe.md  benchmark_wordpiece.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
tests/: Dockerfile  README.md  speed_test.py
tests/speed_test/: Dockerfile  README.md  bpe.py  speed_test.py  wordpiece.py
tests/stress_test/: README.md  run_stress_test.py  stress_test.cpp
tests/unit_test/: command_line_test.py  interactor.py  unit_test.py
tests/unit_tests/: README.md  model.yttm  stress_test.cpp  stress_test.h  test_cli.py  test_manual.py  test_python_api.py  test_stress.py  utils_for_testing.py
tests/unit_tests/artifacts/: base_model.yttm  rename_model.yttm
tests/unit_tests/bpe/: stress_test.cpp  stress_test.h  test_cli.py  test_python_api.py  test_stress.py  utils_for_testing.py
tests/unit_tests/wordpiece/: README.md  stress_test.cpp  test_cli.py  test_manual.py  test_python_api.py  test_stress.py
youtokentome/: __init__.py  youtokentome.py  yttm_cli.py
youtokentome/cpp/: .clang-tidy  bpe.cpp  bpe.h  utf8.cpp  utf8.h  utils.cpp  utils.h  wordpiece.cpp  wordpiece.h  yttm.cpp  yttm.pyx
